# EPC-Guardian

./: .env.example  .gitignore  README.md  frontend_claude.md  package.json  pyproject.toml
apps/api/epc_api/: errors.py  main.py  store.py
apps/api/epc_api/routes/: audit.py  benchmark.py  deviations.py  documents.py  health.py  projects.py  workflows.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts
apps/web/src/: App.test.tsx  App.tsx  index.css
apps/web/src/api/: client.ts
apps/web/src/components/: ChatWidget.tsx  GlobalSearch.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
apps/web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  DataTable.tsx  EmptyState.tsx  Input.tsx  KpiCard.tsx  Modal.tsx  Select.tsx  Skeleton.tsx  Toast.tsx
apps/web/src/features/audit/: AuditTrail.tsx
apps/web/src/features/benchmark/: BenchmarkDashboard.tsx
apps/web/src/features/compliance/: ComplianceFeed.tsx  DeviationDetail.tsx  FilterBar.tsx
apps/web/src/state/: store.ts
data/demo/: ground_truth.jsonl
data/demo/normalized/: activities.jsonl  commissioning_tests.jsonl  documents.json  equipment.jsonl  milestones.jsonl  project.json  purchase_orders.jsonl  relationships.jsonl  requirements.jsonl  submittal_values.jsonl
infra/: Dockerfile.api  Dockerfile.web  docker-compose.yml
infra/github/: ci.yml
scripts/: export_snapshot.py  reset_demo.py  run_benchmark.py  seed_demo.py  smoke_test.py
tests/api/: test_deviations.py
tests/unit/: test_audit.py  test_compliance.py  test_cpm.py  test_health.py  test_ingestion.py  test_workflow.py
(+6 files in other folders)
