[project]
name = "epc-guardian"
version = "0.1.0"
description = "AI Intelligence Platform for Data Centre EPC Project Delivery"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "neo4j>=5.26.0",
    "redis>=5.2.0",
    "pint>=0.24.0",
    "networkx>=3.4.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.17",
    "sse-starlette>=2.2.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["packages.*", "apps.*", "scripts.*", "tests.*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
